fix(hooks): 修复 hooks 下拉列表不显示问题
添加缺失的 hooks API 路由，修复前端无法加载 hooks 列表的问题。

1. **修复**：添加 GET /__hooks/list 路由，返回 hooks.json 内容
2. **修复**：实现 POST /__hooks/run/:name 路由，支持运行单个 hook
3. **修复**：实现 POST /__hooks/run-all 路由，支持批量运行 hooks
4. **新增**：添加 Redmine hook 脚本 data/hook/redmine_issues.py
5. **新增**：添加 npm run install:local 脚本，一键完成构建+打包+安装
6. **更新**：更新文档，添加 install:local 脚本使用说明
7. **更新**：添加 .gitignore 规则，忽略 data/hooks.json 和 data/workitems.json 运行时数据

影响：前端 hooks 下拉列表现在可以正常显示和使用了。

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "npm run build:web && npm run build:copy",
     "dev": "cd web && npm run dev",
     "prepack": "npm run build",
-    "pack": "npm pack"
+    "pack": "npm pack",
+    "install:local": "npm run build && npm pack && npm install -g hubble-pad-$(node -p \"require('./package.json').version\").tgz && rm -f hubble-pad-*.tgz && echo '✅ hubble-pad 已全局安装，可使用 hubble-pad 命令'"
   },
   "keywords": [
     "work-management",
