--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ node_modules/
 logs/
 data/logs/
 
+# 运行时数据（保留 data/hook/ 脚本）
+data/hooks.json
+data/workitems.json
+
 # 系统文件
 .DS_Store
 Thumbs.db
