feat(workitems): 新增收藏功能，收藏条目优先显示
添加 WorkItem 收藏功能，被收藏的条目在列表中优先显示。

1. **新增**：WorkItem 类型添加 favorite 字段（可选布尔值）
2. **新增**：WorkItemRow 组件添加收藏按钮（星形图标）
   - 收藏时显示黄色填充星星
   - 未收藏时显示灰色星星
   - 点击可切换收藏状态
3. **优化**：修改排序逻辑，收藏的条目优先显示在列表顶部
4. **新增**：服务器端添加 POST /__data/toggle-favorite/:id API
   - 支持切换单个 workitem 的收藏状态
   - 状态保存到 workitems.json 文件
5. **新增**：Vite 开发环境添加 toggle-favorite 中间件支持
   - 修复 /data 中间件只处理 GET 请求，避免拦截 POST 请求

影响：用户可以收藏重要的 WorkItem，收藏的条目会自动显示在列表顶部，提升使用体验。

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,9 @@ node_modules/
 # 日志
 *.log
 logs/
-data/logs/
 
-# 运行时数据（保留 data/hook/ 脚本）
-data/hooks.json
-data/workitems.json
+# 运行时数据（整个 data 目录）
+data/
 
 # 系统文件
 .DS_Store
