feat(容器化): 完善 Docker 容器化配置
- 添加 Dockerfile 多阶段构建配置
- 添加 docker-compose.yml 容器编排配置
- 添加 run.sh 和 stop.sh 启动/停止脚本
- 支持 data 和 data_local 双目录挂载
- 支持 prod 参数控制数据目录选择
- 添加 Python 依赖管理（requirements.txt）
- 配置 npm 镜像源和代理支持
- 更新文档说明容器化使用方法

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "README.md"
   ],
   "scripts": {
+    "start": "node server/index.js",
     "build:web": "cd web && npm run build",
     "build:copy": "rm -rf dist && cp -r web/dist dist",
     "build": "npm run build:web && npm run build:copy",
