--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "url": "https://github.com/EvilJoker/hubble-pad/issues"
   },
   "dependencies": {
+    "cron-parser": "^5.4.0",
     "express": "^4.18.2"
   },
   "engines": {
